# polyptich

./: .gitignore  README.ipynb  README.md  README.py  dist.sh  pyproject.toml
examples/: www_components.py  www_overview_grid.py
scripts/: heatmaps.py  render_readme.sh
src/eyck/: utils.py
src/eyck/grid/: broken.py  grid.py
src/genomeplot/grid/: broken.py  grid.py
src/polyptich/: __init__.py  annot.py  boxplot.py  colorbar.py  colormaps.py  density.py  paths.py  utils.py
src/polyptich/grid/: __init__.py  broken.py  element.py  figure.py  grid.py  panel.py
src/polyptich/heatmap/: __init__.py  annotation.py  heading.py  heatmap.py  layouts.py  ticks.py
src/polyptich/render/: __init__.py  convert.py
src/polyptich/www/: __init__.py  components.py  examples.py  overview.py  page.py  server.py
src/polyptich/www/static/: polyptich-overview.js  polyptich-ui.css  polyptich-www.css  polyptich-www.js
src/polyptich/www/templates/: 404.html  browser.html  report.html
tests/: test_www_components.py  test_www_endpoints.py  test_www_examples.py  test_www_page.py
