[build-system]
requires = ["setuptools>=41", "wheel", "setuptools_scm[toml]>=6.2", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "polyptich"
authors = [
    {name = "Wouter Saelens", email = "wouter.saelens@gmail.com"},
]
description = "Extra visualization functions"
requires-python = ">=3.8"
keywords = ["visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
]
dynamic = ["version", "readme"]
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/probabilistic-cell/polyptich"
"Bug Tracker" = "https://github.com/probabilistic-cell/polyptich/issues"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "pytest",
]
test = [
    "pytest",
    "ruff",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    "too-many-arguments",
    "not-callable",
    "redefined-builtin",
    "redefined-outer-name",
]

[tool.ruff]
line-length = 100
include = ['src/**/*.py']
exclude = ['scripts/*']
